// $Id$

Feeds 6.x 1.X XXXX
------------------

- #647222 cglusky, jeffschuler: Specify input format for feed items.

Feeds 6.x 1.0 Beta 2, 2010-07-10
--------------------------------

- #753426 Monkey Master, andrewlevine, alex_b: Partial update of nodes.
- #840626 andrewlevine, alex_b: Support using same mapping target multiple
  times.
- #624464 lyricnz, alex_b: Fix to "support tabs as delimiters".
- #840350 lyricnz: (Optionally) Transliterate enclosure filenames to provide
  protection from awkward names.
- #842040 dixon_: Accept all responses from the 2xx status code series.
- #836982 Steven Merrill: Fix Feeds.module tests do not work when run from the
  command line.

Feeds 6.x 1.0 Beta 1, 2010-06-23
--------------------------------

Feeds 6.x 1.0 Alpha 16, 2010-06-19
----------------------------------

- #830438 andrewlevine: More secret files in FeedsImportBatch::getFilePath().
- #759302 rjb, smartinm, et. al: Fix user warning: Duplicate entry.
- #819876 alex_b: Fix field 'url' and 'guid' don't have default values.
- #623444 mongolito404, pvhee, pdrake, servantleader, alex_b et. al.: Mapper for
  link module.
- #652180 ronald_istos, rjbrown99, et. al.: Assign author of imported nodes.
- #783098 elliotttf: Introduce hook_feeds_user_processor_targets_alter(), mapper
  for user profile fields.

Feeds 6.x 1.0 Alpha 15, 2010-05-16
----------------------------------

- #791296 B-Prod: Fix Feeds data processor does update id 0.
- #759904 lyricnz: Provide a Google Sitemap Parser.
- #774858 rjbrown99: Fix Node Processor updates node "created" time when
  updating.
- #704236 jerdavis: Support mapping to CCK float field.
- #783820 klonos: Fix warning: copy() [function.copy]: Filename cannot be empty
  in FeedsParser.inc on line 168.
- #778416 clemens.tolboom: Better message when plugin is missing.
- #760140 lyricnz: FeedsBatch->total not updated when addItem($item) is called.
- #755544 Monkey Master: Keep batch processing when mapping fails.